--- a/experimental/higepon/scheme-gc/lib/shell.scm.in
+++ b/experimental/higepon/scheme-gc/lib/shell.scm.in
@@ -1,39 +1,6 @@
-(define (set-current-directory! path)
-  (set! *current-directory* path))
-
-(define current-directory
-  (lambda path
-    (if (null? (car path))
-        *current-directory*
-        (set-current-directory! (car path)))))
-
-(define (pwd) (print (current-directory)))
-(define dir pwd)
-
 (define (help)
   (print "\nWelcome to Mona ")
   (print "(ls path) / (kill tid) / (reboot) / (halt)"))
-
-(define ls
-  (lambda dir-path
-    (let ((dir (if (null? (car dir-path)) *current-directory* (car dir-path))))
-      (for-each (lambda (e) (print (e 'name))) (directory-entries dir)))))
-
-(define (directory-entries path)
-  (let ((d (mona-dir-open path)))
-  (let loop ((entry (mona-dir-read d)) (entries '()))
-    (if entry
-        (loop (mona-dir-read d)
-              (cons (make-directory-entry (car entry) (cdr entry)) entries))
-        (begin (mona-dir-close d) entries)))))
-
-
-(define (make-directory-entry name directoryp)
-  (define (dispatch m)
-    (cond ((eq? m 'name) name)
-          ((eq? m 'directory?) directoryp)
-          (else (print "make-directory-entry error"))))
-  dispatch)
 
 (define halt
   (lambda ()
@@ -52,7 +19,6 @@
 
 (define ps mona-ps)
 
-
 (define (read-file file-name)
   (with-input-from-file file-name
     (lambda ()
@@ -64,43 +30,117 @@
 (define (cat file)
   (display (read-file file)))
 
-
 (define (print s)
   (display s)
   (newline))
 
-(define (make-directory-entry name directoryp)
-  (let ((children '()))
-    (define (add-child child)
-      (set! children (cons child children)))
-    (define (has-child? name)
-      (find (lambda (d) (string=? (d 'name) name)) children))
-    (define (dispatch m)
-      (cond ((eq? m 'name) name)
-            ((eq? m 'directory?) directoryp)
-            ((eq? m 'children) children)
-            ((eq? m 'add-child) add-child)
-            ((eq? m 'has-child?) has-child?)
-            (else (print "make-directory-entry error"))))
-    dispatch))
+;; directories
+;; depends on directory entry structure
+(define (fs-new-directory name)
+  (cons name (cons '() '())))
 
-(define (make-directory-session root current-directory)
-  (define (directory-has-child? dir paths)
-    (if (null? paths)
-        #t
-        (let ((next-dir ((dir 'has-child?) (car paths))))
-          (if (and next-dir (next-dir 'directory?))
-              (directory-has-child? next-dir (cdr paths))
-              #f))))
-  (define (directory-exist? path)
-    (let* ((paths (string-split path #\/))
-           (first (car paths)))
-      (if (and first (string=? "" first))
-          (directory-has-child? root (cdr paths))
-          (directory-has-child? current-directory (cdr paths)))))
-  (define (dispatch m)
-    (cond ((eq? m 'current-directory) current-directory)
-          ((eq? m 'root) root)
-          ((eq? m 'directory-exist?) directory-exist?)
-          (else (print "make-directory-session error"))))
-  dispatch)
+(define (fs-new-file name)
+  (cons name (cons '() #f)))
+
+(define (fs-name entry)
+  (car entry))
+
+(define (fs-directory? entry)
+  (not (fs-file? entry)))
+
+(define (fs-file? entry)
+  (not (cddr entry)))
+
+(define (fs-entries directory)
+  (cddr directory))
+
+(define (fs-set-parent directory parent)
+  (set-car! (cdr directory) parent))
+
+(define (fs-parent directory)
+  (cadr directory))
+
+(define (fs-add-entry directory entry)
+  (let ((entries (fs-entries directory)))
+    (fs-set-parent entry directory)
+    (if (null? entries)
+        (set-cdr! (cdr directory) (cons entry '()))
+        (set-cdr! (cdr directory) (cons entry entries)))
+    directory))
+
+(define (fs-has-child directory name)
+  (cond ((string=? name ".") directory)
+        ((string=? name "..") (fs-parent directory))
+        (else (assoc name (fs-entries directory)))))
+
+;; depends on directory entry structure above
+
+;; depends on *fs-root-directory* / *fs-current-directory*
+(define (fs-find path)
+  (let ((paths (string-split path #\/)))
+    (if (fs-start-with-slash? path)
+        (if (= 1 (string-length path))
+            *fs-root-directory*
+            (fs-find-entry *fs-root-directory* (cdr paths)))
+        (fs-find-entry *fs-current-directory* paths))))
+
+(define (fs-current-directory)
+  *fs-current-directory*)
+
+(define (fs-change-directory path)
+  (let ((directory (fs-find-directory path)))
+    (if directory
+        (begin (set! *fs-current-directory* directory) directory)
+        #f)))
+
+(define (fs-io-enum-directory-entries path)
+  (define (create-fs-entry entry)
+    (if (cdr entry)
+        (fs-new-directory (car entry))
+        (fs-new-file (car entry))))
+  (let ((d (mona-dir-open path)))
+    (let loop ((entry (mona-dir-read d)) (entries '()))
+      (if entry
+          (loop (mona-dir-read d)
+                (cons (create-fs-entry entry) entries))
+          (begin (mona-dir-close d) entries)))))
+;; depends on *fs-root-directory* / *fs-current-directory* above
+
+(define (fs-find-entry dir paths)
+  (cond ((and dir (null? (cdr paths))) (fs-has-child dir (car paths)))
+        (dir (fs-find-entry (fs-has-child dir (car paths)) (cdr paths)))
+        (else #f)))
+
+(define (fs-path entry)
+  (let ((parent (fs-parent entry)))
+    (if (null? parent) (string-append (fs-name entry))
+        (string-append (if (string=? (fs-path parent) "/") "" (fs-path parent)) "/" (fs-name entry)))))
+
+(define (fs-print root)
+  (define (fs-print-iter directory space)
+    (for-each
+     (lambda (e) (display space) (print (fs-name e)) (if (fs-directory? e) (fs-print-iter e (string-append space " "))))
+     (fs-entries directory)))
+  (fs-print-iter root " "))
+
+(define (fs-start-with-slash? path)
+  (and (> (string-length path) 0) (char=? (string-ref path 0) #\/)))
+
+(define (fs-find-generic proc path)
+  (let ((entry (fs-find path)))
+    (and entry (proc entry) entry)))
+
+(define (fs-find-file path)
+  (fs-find-generic fs-file? path))
+
+(define (fs-find-directory path)
+  (fs-find-generic fs-directory? path))
+
+(define (fs-create-tree root path)
+  (for-each
+   (lambda (e)
+     (fs-add-entry root e)
+     (if (fs-directory? e)
+         (fs-create-tree e (string-append path "/" (fs-name e)))))
+   (remove (lambda (e) (or (string=? (fs-name e) ".") (string=? (fs-name e) "..")))
+           (fs-io-enum-directory-entries path))))
