--- a/experimental/higepon/scheme-gc/test/test.scm.in
+++ b/experimental/higepon/scheme-gc/test/test.scm.in
@@ -399,17 +399,17 @@
                         (set! do-index (+ do-index 2)))
                    (= do-index 10))
 
-;; (load "<TESTDIR>/port.scm")
-;; (load "<TESTDIR>/char.scm")
-;; (load "<TESTDIR>/vector.scm")
-;; (load "<TESTDIR>/symbol.scm")
-;; (load "<TESTDIR>/number.scm")
-;; (load "<TESTDIR>/closure.scm")
-;; (load "<TESTDIR>/string.scm")
-;; (load "<TESTDIR>/pair.scm")
-;; (load "<TESTDIR>/util.scm")
-;; (load "<TESTDIR>/dir.scm")
-;; (load "<TESTDIR>/cont.scm")
+(load "<TESTDIR>/port.scm")
+(load "<TESTDIR>/char.scm")
+(load "<TESTDIR>/vector.scm")
+(load "<TESTDIR>/symbol.scm")
+(load "<TESTDIR>/number.scm")
+(load "<TESTDIR>/closure.scm")
+(load "<TESTDIR>/string.scm")
+(load "<TESTDIR>/pair.scm")
+(load "<TESTDIR>/util.scm")
+(load "<TESTDIR>/dir.scm")
+(load "<TESTDIR>/cont.scm")
 <IF_MONA>(load "<TESTDIR>/shell.scm")
 ;; ;; report
 (total-report)
